--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   flex-wrap: wrap;
 }
 
+.App .main-component {
+  flex-basis: 50%;
+  padding: 0 100px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -43,7 +48,7 @@
 /* SEARCH COMPONENT */
 
 .search-component {
-  margin: 10px 0;
+  margin: 10px 0 50px 0;
 }
 
 .search-component .label {
